tableau-specialist/1.0/modules/ROOT/pages/tableau-specialist-connector-reference.adoc

= Tableau Connector 1.0 Reference



== Configurations
---
[[TableauHyperConfig]]
=== Hyper configuration


This configuration provides users access to the HyperAPI Java library developed by Tableau. Users can create, update, and delete hyper files locally.

[NOTE]
Hyper Configuration requires you to provide a path to the hyperd executable file. It is not possible to use Hyper Configuration and its operations in CloudHub because CloudHub does not allow executing external code due to security reasons.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<TableauHyperConfig_Connection, Hyper Connection>>
 | Connection types for this configuration. | | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

==== Connection Types
[[TableauHyperConfig_Connection]]
===== Hyper Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Working Directory a| String |  Directory that is considered the root of every relative path used with this connector. If not provided, the value defaults to the value of the `user.home` system property. If that system property is not set, then the connector fails to initialize. |  |
| Hyperd Directory a| String |  Directory that makes the hyperd executable. |  |
| Telemetry a| Enumeration, one of:

** SEND_USAGE_DATA_TO_TABLEAU
** DO_NOT_SEND_USAGE_DATA_TO_TABLEAU | HyperProcess is instructed to send telemetry on the Hyper API usage to Tableau. |  |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===

== Supported Operations

* <<CreateHyperFile>>
* <<InsertDataToHyperFileFromCsv>>
* <<InsertDataToHyperFile>>
* <<QueryDataFromHyperFile>>
* <<UpdateDataFromHyperFile>>


[NOTE]
Currently, you can't use these Hyper operations of the Tableau Connector in Mule apps deployed in a FIPS environment. However, you can use all other Tableau Connector operations successfully in a FIPS environment.

---
[[TableauSpecialistConfig]]
=== Rest Configuration


This configuration provides users access to the Rest API exposed by Tableau. All of the operations executed over the Rest API are bound to this configuration.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<TableauSpecialistConfig_BasicUsernamePassword, Basic Authentication>>
* <<TableauSpecialistConfig_Pat, PAT Authentication>>
 | Connection types for this configuration. | | x
| Read Timeout a| Number |  Defines the default amount of time to wait for a response when executing an operation. |  30 |
| Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Read Timeout* value. |  SECONDS |
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

==== Connection Types
[[TableauSpecialistConfig_BasicUsernamePassword]]
===== Basic Authentication


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Server URL a| String |  URL of the Tableau server. |  | x
| API version a| String |  API version to use. |  | x
| Content URL a| String |  Content URL (subpath) of the site you sign into. |  | x
| Connection Timeout a| Number |  How long the connector waits before timing out when establishing a connection to the remote service. Values that are less than one millisecond are converted to `0`. |  -1 |
| Connection Timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Proxy configuration a| <<ProxyConfiguration>> |  Configures a proxy for outbound connections. |  |
| Username a| String |  Username used to initialize the session. |  | x
| Password a| String |  Password used to authenticate the user. |  | x
| TLS configuration a| <<Tls>> |  Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===
[[TableauSpecialistConfig_Pat]]
===== PAT Authentication


Personal access tokens enable Tableau Server users to create long-lived authentication tokens. After obtaining the authentication token, send the token with each subsequent request to the X-Tableau-Auth header.


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Server URL a| String |  URL of the Tableau server. |  | x
| API version a| String |  API version to use. |  | x
| Content URL a| String |  Content URL (subpath) of the site you sign into. |  | x
| Connection Timeout a| Number |  How long the connector waits before timing out when establishing a connection to the remote service. Values that are less than one millisecond are converted to `0`. |  -1 |
| Connection Timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Proxy configuration a| <<ProxyConfiguration>> |  Configures a proxy for outbound connections. |  |
| Personal Access Token Name a| String |  Personal access token name defined in the Tableau server UI. The personal access token name and personal access token secret are mutually exclusive with the Username and Password fields. |  | x
| Personal Access Token Secret a| String |  Personal access token secret defined in the Tableau UI. The personal access token name and personal access token secret are mutually exclusive with the Username and Password fields. |  | x
| TLS configuration a| <<Tls>> |  Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===

== Supported Operations
* <<AppendToFileUpload>>
* <<CreateProject>>
* <<DeleteProject>>
* <<InitiateFileUpload>>
* <<PublishDatasource>>
* <<PublishWorkbook>>
* <<QueryProjects>>
* <<UpdateProject>>

== Supported Sources

* <<NewOrModifiedDatasourceListener>>



[[CreateHyperFile]]
== Create hyper file
`<tableau-specialist:create-hyper-file>`


Creates an empty hyper file based on the column definition provided by the user.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Output Hyper file name a| String |  Name of the hyper file to create. |  | x
| Schema name a| String |  Name of the schema that creates the table. |  |
| Table name a| String |  Name of the table. |  | x
| Columns a| Array of <<ColumnDefinition>> |  List of columns defined in the table. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<TableauHyperConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FILE_DOESNT_EXIST
* TABLEAU-SPECIALIST:FILE_IS_NOT_DIRECTORY
* TABLEAU-SPECIALIST:HYPER_EXCEPTION
* TABLEAU-SPECIALIST:ILLEGAL_PATH
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED


[[InsertDataToHyperFileFromCsv]]
== Insert data to hyper file from csv
`<tableau-specialist:insert-data-to-hyper-file-from-csv>`


Populates a hyper file from an existing CSV document.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Hyper file name a| String |  Name of the hyper file. |  | x
| Schema name a| String |  Name of the schema. |  |
| Table name a| String |  Name of the table. |  | x
| Columns a| Array of <<ColumnDefinition>> |  List of columns defined in the table. |  | x
| CSV file path a| String |  Path to the CSV file. |  | x
| CSV NULL column a| String |  Defines what the CSV file uses to represent null values. |  | x
| CSV delimiter a| String |  Defines what the CSV file uses as a delimiter. |  | x
| CSV header a| Boolean |  Specifies whether the CSV file contains a header. |  false |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations

* <<TableauHyperConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FILE_DOESNT_EXIST
* TABLEAU-SPECIALIST:FILE_IS_NOT_DIRECTORY
* TABLEAU-SPECIALIST:HYPER_EXCEPTION
* TABLEAU-SPECIALIST:ILLEGAL_PATH
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED


[[InsertDataToHyperFile]]
== Insert data to hyper file
`<tableau-specialist:insert-data-to-hyper-file>`


Inserts data into a table belonging to a hyper file.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Hyper file name a| String |  Name of the hyper file that contains the inserted data. |  | x
| SQL query a| String |  SQL command used to insert the data into the table from the hyper file. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations

* <<TableauHyperConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FILE_DOESNT_EXIST
* TABLEAU-SPECIALIST:FILE_IS_NOT_DIRECTORY
* TABLEAU-SPECIALIST:HYPER_EXCEPTION
* TABLEAU-SPECIALIST:ILLEGAL_PATH
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED


[[QueryDataFromHyperFile]]
== Query Data From Hyper File
`<tableau-specialist:query-data-from-hyper-file>`


Queries data from tables belonging to a hyper file.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Hyper file name a| String |  Name of the hyper file that contains the queried data. |  | x
| SQL query a| String |  SQL query that selects data from the hyper file. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<TableauHyperConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FILE_DOESNT_EXIST
* TABLEAU-SPECIALIST:FILE_IS_NOT_DIRECTORY
* TABLEAU-SPECIALIST:HYPER_EXCEPTION
* TABLEAU-SPECIALIST:ILLEGAL_PATH
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED


[[UpdateDataFromHyperFile]]
== Update data from hyper file
`<tableau-specialist:update-data-from-hyper-file>`


Updates data from tables into a .hyper file by sending SQL queries.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Hyper file path a| String |  Name of the hyper file that is updated. |  | x
| SQL query a| String |  SQL command used to update the data in the table from the hyper file. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Number
|===

=== For Configurations

* <<TableauHyperConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FILE_DOESNT_EXIST
* TABLEAU-SPECIALIST:FILE_IS_NOT_DIRECTORY
* TABLEAU-SPECIALIST:HYPER_EXCEPTION
* TABLEAU-SPECIALIST:ILLEGAL_PATH
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED


[[AppendToFileUpload]]
== Append to file upload
`<tableau-specialist:append-to-file-upload>`


Uploads a block of data and appends it to the data that is already uploaded.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| File Content a| Any |  Content of the file to upload is included in a MIME multipart message. |  #[payload] |
| Upload Session Id a| String |  ID of the upload session. You get this value when you start an upload session using the *Initiate file upload* operation. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FILE_SIZE_TOO_LARGE
* TABLEAU-SPECIALIST:FILE_UPLOAD_NOT_FOUND
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:MALFORMED_REQUEST_BODY
* TABLEAU-SPECIALIST:MISSING_FILE_DATA
* TABLEAU-SPECIALIST:NOT_A_PUBLISHER
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:TIMEOUT
* TABLEAU-SPECIALIST:UPLOAD_FAILURE


[[CreateProject]]
== Create project
`<tableau-specialist:create-project>`


Creates a project on the site. You can also create project hierarchies by creating a project under the specified parent project on the site.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Publish value a| Boolean |  Specifies whether to publish the sample workbooks provided by Tableau to the project. |  false |
| Content a| Any |  InputStream containing specific attributes for this operation. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:BAD_REQUEST
* TABLEAU-SPECIALIST:BAD_REQUEST_PERMISSION
* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:INVALID_REQUEST_METHOD
* TABLEAU-SPECIALIST:PROJECT_NAME_CONFLICT
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:SITE_NOT_FOUND
* TABLEAU-SPECIALIST:TIMEOUT


[[DeleteProject]]
== Delete project
`<tableau-specialist:delete-project>`


Deletes the specified project from the site. When a project is deleted, all of its assets are also deleted, such as its associated workbooks, data sources, project view options, and rights. Use this operation with caution.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Project ID a| String |  ID of the project to delete. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:DELETION_FORBIDDEN
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:PROJECT_NOT_FOUND
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:TIMEOUT


[[InitiateFileUpload]]
== Initiate file upload
`<tableau-specialist:initiate-file-upload>`


Initiates the upload process for a file.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:ACCESS_TO_FAVORITES_FORBIDDEN
* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:TIMEOUT


[[PublishDatasource]]
== Publish datasource
`<tableau-specialist:publish-datasource>`


Publishes a data source to the site, or appends data to an existing data source. To make other changes to a published data source, call *Update Data Source* or *Update Data Source Connection*.

Use this operation in the following ways:

* Publish a data source in a single request. You must include the content of the data source file in the body of the request. The maximum size of a file that can be published in a single request is 64 MB. To avoid timing out the publishing process, use the *asJob* parameter to make data source publication asynchronous.

* Publish a data source in multiple requests. You must initiate a file upload by calling *Initiate File Upload*, sending portions of the file to the server using *Append to File Upload*, and then committing the upload by calling *Publish Data Source*. In this case, *Publish Data Source* does not contain the file to publish.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Overwrite flag a| Boolean |  Set to `true` to overwrite a data source that has the same name. Set to `false` to ensure failure if the specified data source already exists. |  false |
| As job value a| Boolean |  Specifies whether to publish data sources asynchronously. |  false |
| Append flag a| Boolean |  Set to `true` to append the data that is published to an existing data source with the same name. If set to `true` but the data source doesn't already exist, the operation will fail. |  false |
| Datasource Request Options a| One of:

* <<PublishDatasourceRequestBody>>
* <<PublishDatasourceRequestSessionId>> |  Datasource object. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:DATA_SOURCE_NOT_FOUND
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INCOMPATIBLE_OVERWRITE_AND_APPEND_VALUES
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:INVALID_ASK_DATA_ENABLEMENT
* TABLEAU-SPECIALIST:INVALID_FILE_NAME_FILE_TYPE
* TABLEAU-SPECIALIST:PUBLISHING_ERROR
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:TIMEOUT


[[PublishWorkbook]]
== Publish workbook
`<tableau-specialist:publish-workbook>`


Publishes a workbook onto the site. To make changes to a published workbook, call *Update Workbook* or *Update Workbook Connection*.

Use this operation in the following ways:

* Publish a workbook in a single request. You must include the content of the workbook file in the body of the request. The maximum size of a file that can be published in a single request is 64 MB. To avoid timing out the publishing process, use the *asJob* parameter to make workbook publication asynchronous.

* Publish a workbook in multiple requests. You must initiate a file upload by calling *Initiate File Upload*, sending portions of the file to the server using *Append to File Upload*, and then committing the upload by calling *Publish Workbook*. In this case, *Publish Workbook* does not contain the file to publish.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Overwrite flag a| Boolean |  Set to `true` to overwrite a data source that has the same name. Set to `false` to ensure failure if the specified data source already exists. |  false |
| As job value a| Boolean |  Specifies whether to publish data sources asynchronously. |  false |
| Skip connection a| Boolean |  If set to `true`, the Tableau server does not check if a non-published connection of a workbook is reachable. Publishing will succeed but unchecked connection issues may result in a non-functioning workbook. |  false |
| Workbook Request Options a| One of:

* <<PublishWorkbookRequestBody>>
* <<PublishWorkbookRequestSessionId>> |  Workbook object. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONCURRENT_UPDATE
* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FAILED_CONNECTION_CHECK
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:MISSING_OR_INVALID_FILE_TYPE
* TABLEAU-SPECIALIST:PUBLISHING_OVERWRITE
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:TIMEOUT
* TABLEAU-SPECIALIST:WORKBOOK_NOT_FOUND


[[QueryProjects]]
== Query projects
`<tableau-specialist:query-projects>`


Returns a list of projects on the specified site, with optional parameters for specifying the paging of large results.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Page Size a| Number |  Number of items to return in one response. The minimum is 1 and the maximum is 1000.  |  100 |
| Filter Expression a| Array of <<FilterExpression>> |  Expression that specifies a subset of data sources to return. |  |
| Sort Expression a| Array of <<SortExpression>> |  Expression that specifies the order in which to return user information. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:INVALID_PAGE_NUMBER
* TABLEAU-SPECIALIST:INVALID_PAGE_SIZE
* TABLEAU-SPECIALIST:PAGE_SIZE_LIMIT_EXCEEDED
* TABLEAU-SPECIALIST:TIMEOUT


[[UpdateProject]]
== Update project
`<tableau-specialist:update-project>`


Updates a project on the specified site.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Project ID a| String |  ID of the project to update. |  | x
| Publish value a| Boolean |  Specifies whether to publish the sample workbooks provided by Tableau to the project. |  false |
| Content a| Any |  InputStream containing specific attributes for this operation. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| Binary
|===

=== For Configurations

* <<TableauSpecialistConfig>>

=== Throws

* TABLEAU-SPECIALIST:CONNECTIVITY
* TABLEAU-SPECIALIST:FORBIDDEN
* TABLEAU-SPECIALIST:INSUFFICIENT_SITE_STORAGE_REMAINING
* TABLEAU-SPECIALIST:PROJECT_ID_MISMATCH
* TABLEAU-SPECIALIST:RETRY_EXHAUSTED
* TABLEAU-SPECIALIST:TIMEOUT
* TABLEAU-SPECIALIST:UPDATE_FORBIDDEN
* TABLEAU-SPECIALIST:UPDATE_FORBIDDEN_PERMISSION


== Sources

[[NewOrModifiedDatasourceListener]]
== On New Or Modified Data Source
`<tableau-specialist:new-or-modified-datasource-listener>`

Initiates a flow when a data source is created or updated.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Since a| String |  Date in the yyyy-MM-dd'T'HH:mm:ss'Z' format, for example, 2014-01-01T00:00:00Z. If this field is empty, this operation retrieves the selected objects from the time the Mule app is started. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration used to execute this component. |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| Any
|===

=== For Configurations

* <<TableauSpecialistConfig>>



== Types

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`
+
Allow the deployment to fail.

* `false`
+
Ignore the results of the connectivity test. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===


[[ColumnDefinition]]
=== Column Definition

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Column Name a| String | Name of the column. |  | x
| Column Type a| Enumeration, one of:

** UNSUPPORTED
** BOOL
** BIG_INT
** SMALL_INT
** INT
** NUMERIC
** DOUBLE
** OID
** BYTES
** TEXT
** VARCHAR
** CHAR
** JSON
** DATE
** INTERVAL
** TIME
** TIMESTAMP
** TIMESTAMP_TZ
** GEOGRAPHY |  |  | x
| Column Nullability a| Enumeration, one of:

** NULLABLE
** NOT_NULLABLE | Type of the column. |  | x
| Column Collation a| String | Collation of the column. |  |
| Numeric Scale a| Number | Numeric scale of the column. |  |
| Numeric Precision a| Number | Numeric precision of the column. |  |
| Length a| Number | Length of the column. |  |
|===

[[ProxyConfiguration]]
=== Proxy Configuration

Configures the settings used to connect through a proxy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server. |  | x
| Port a| Number | Port of the proxy server. |  | x
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.


[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of store used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`
+
Verify only the last element in the certificate chain.

* `false`
+
Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`
+
Check the Certification Revocation List (CRL) for certificate validity.

* `false`
+
Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`
+
Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`
+
Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`
+
Avoid verification failure.

* `false`
+
Allow the verification to fail. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  |
|===


[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload’s `hashCode()` returned. |  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  |
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message.  |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  |
|===


[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number |  Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand.  |  |
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

[[FilterExpression]]
=== Filter Expression

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String | Name of the field. |  | x
| Operator a| String | Name of the operator. |  | x
| Value a| String | Name of the value. |  | x
|===

[[SortExpression]]
=== Sort Expression

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String | Name of the field. |  | x
| Direction a| Enumeration, one of:

** ASC
** DESC | Type of direction. |  | x
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the *Buffer Size Increment* field, with an upper limit of *Max In Memory Size*. | 100 |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full.  | 100 |
| Max Buffer Size a| Number | Maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | Maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Objects* field. |  |
|===

[[PublishWorkbookRequestBody]]
=== Publish Workbook Request Body

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Workbook File Content a| Binary | File content of the workbook. |  |
| Workbook Attributes a| Binary | Attributes of the workbook. | #[payload] |
| Workbook File Name a| String | File name of the workbook. |  |
|===

[[PublishWorkbookRequestSessionId]]
=== Publish Workbook Request Session Id

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Upload Session Id a| String | Upload session ID for *Publish workbook*. |  |
| Workbook Attributes a| Binary | Attributes of the workbook. | #[payload] |
| Workbook File Type a| Enumeration, one of:

** TWB
** TWBX | File type of the workbook. |  |
|===

[[PublishDatasourceRequestBody]]
=== Publish Datasource Request Body

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Datasource File Content a| Binary | File content of the datasource. |  |
| Datasource Attributes a| Binary | Attributes of the datasource. | #[payload] |
| Datasource File Name a| String | File name of the datasource. |  |
|===

[[PublishDatasourceRequestSessionId]]
=== Publish Datasource Request Session Id

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Upload Session Id a| String | Upload session ID for *Publish datasource*. |  |
| Datasource Attributes a| Binary | Attributes of the datasource. | #[payload] |
| Datasource File Type a| Enumeration, one of:

** HYPER
** TDS
** TDSX
** TDE | File type of the datasource. |  |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
